src/Parsers/GrammarBParser.java
package Parsers;
// Generated from .\GrammarB.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarBParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__4=1, T__3=2, T__2=3, T__1=4, T__0=5, INT_TYPE=6, DOUBLE_TYPE=7, CHAR_TYPE=8, 
		STRING_TYPE=9, PROPOSITION_TYPE=10, SET_TYPE=11, TUPLE_TYPE=12, BOOL_TYPE=13, 
		ASSIGN_SYMBOL=14, LEFT_BRACKET=15, RIGHT_BRACKET=16, COMMA=17, SEMICOLON=18, 
		LEFT_BRACE=19, RIGHT_BRACE=20, LEFT_ANGLE_BRACKET=21, RIGHT_ANGLE_BRACKET=22, 
		CONST=23, MACHINE=24, INVARIANT=25, ATTRIBUTE=26, OPERATIONS=27, END=28, 
		VOID=29, BOOL=30, CHAR=31, STRING=32, NIL=33, INTEGER=34, REAL=35, PROPOSITION_SYMBOL_1=36, 
		PROPOSITION_SYMBOL_2=37, PROPOSITION_SYMBOL_3=38, PROPOSITION_SYMBOL_4=39, 
		ELEMENT_SET_SYMBOL=40, SET_SYMBOL_1=41, SET_SYMBOL_2=42, GRE=43, EGRE=44, 
		LES=45, ELES=46, EQU=47, UEQU=48, ADD=49, SUB=50, MUL=51, DIV=52, ID=53, 
		WS=54;
	public static final String[] tokenNames = {
		"<INVALID>", "'while'", "'if'", "'else'", "'return'", "'|'", "'int'", 
		"'double'", "'char'", "'string'", "'proposition'", "'set'", "'tuple'", 
		"'bool'", "'='", "'('", "')'", "','", "';'", "'{'", "'}'", "'<<'", "'>>'", 
		"'const'", "'MACHINE'", "'INVARIANT'", "'ATTRIBUTE'", "'OPERATIONS'", 
		"'END'", "'void'", "BOOL", "CHAR", "STRING", "'nil'", "INTEGER", "REAL", 
		"'~'", "'/\\'", "'\\/'", "'->'", "ELEMENT_SET_SYMBOL", "SET_SYMBOL_1", 
		"'--'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'+'", "'-'", "'*'", 
		"'/'", "ID", "WS"
	};
	public static final int
		RULE_abstact_machine = 0, RULE_function_declare = 1, RULE_function_define = 2, 
		RULE_valuable_declare = 3, RULE_valuable_interupt = 4, RULE_const_declare = 5, 
		RULE_const_interupt = 6, RULE_argument_list = 7, RULE_value_argument_list = 8, 
		RULE_have_return_call = 9, RULE_no_return_call = 10, RULE_element = 11, 
		RULE_element_group = 12, RULE_expression = 13, RULE_expression_expand = 14, 
		RULE_term = 15, RULE_factor = 16, RULE_math_relation_symbol = 17, RULE_math_relation_proposition = 18, 
		RULE_proposition_term_0 = 19, RULE_proposition_term_1 = 20, RULE_proposition_term_2 = 21, 
		RULE_proposition_term_3 = 22, RULE_proposition = 23, RULE_change_1 = 24, 
		RULE_change_1_temp_1 = 25, RULE_change_1_temp_2 = 26, RULE_change_2 = 27, 
		RULE_change_3 = 28, RULE_change_4 = 29, RULE_set_term_0 = 30, RULE_set_term_1 = 31, 
		RULE_set = 32, RULE_element_set_relation_proposition = 33, RULE_multi_stat = 34, 
		RULE_stat = 35, RULE_assign_stat = 36, RULE_return_stat = 37, RULE_condition_stat = 38, 
		RULE_else_stat = 39, RULE_condition = 40, RULE_circulate_stat = 41, RULE_have_return_define = 42, 
		RULE_no_return_define = 43, RULE_return_define = 44, RULE_have_return_declare = 45, 
		RULE_no_return_declare = 46, RULE_return_declare = 47, RULE_type = 48, 
		RULE_signed_integer = 49, RULE_signed_real = 50, RULE_addsub = 51, RULE_muldiv = 52;
	public static final String[] ruleNames = {
		"abstact_machine", "function_declare", "function_define", "valuable_declare", 
		"valuable_interupt", "const_declare", "const_interupt", "argument_list", 
		"value_argument_list", "have_return_call", "no_return_call", "element", 
		"element_group", "expression", "expression_expand", "term", "factor", 
		"math_relation_symbol", "math_relation_proposition", "proposition_term_0", 
		"proposition_term_1", "proposition_term_2", "proposition_term_3", "proposition", 
		"change_1", "change_1_temp_1", "change_1_temp_2", "change_2", "change_3", 
		"change_4", "set_term_0", "set_term_1", "set", "element_set_relation_proposition", 
		"multi_stat", "stat", "assign_stat", "return_stat", "condition_stat", 
		"else_stat", "condition", "circulate_stat", "have_return_define", "no_return_define", 
		"return_define", "have_return_declare", "no_return_declare", "return_declare", 
		"type", "signed_integer", "signed_real", "addsub", "muldiv"
	};

	@Override
	public String getGrammarFileName() { return "GrammarB.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarBParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Abstact_machineContext extends ParserRuleContext {
		public TerminalNode INVARIANT() { return getToken(GrammarBParser.INVARIANT, 0); }
		public TerminalNode ID() { return getToken(GrammarBParser.ID, 0); }
		public List<Function_declareContext> function_declare() {
			return getRuleContexts(Function_declareContext.class);
		}
		public Function_declareContext function_declare(int i) {
			return getRuleContext(Function_declareContext.class,i);
		}
		public TerminalNode MACHINE() { return getToken(GrammarBParser.MACHINE, 0); }
		public TerminalNode ATTRIBUTE() { return getToken(GrammarBParser.ATTRIBUTE, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(GrammarBParser.RIGHT_BRACKET, 0); }
		public List<Function_defineContext> function_define() {
			return getRuleContexts(Function_defineContext.class);
		}
		public TerminalNode OPERATIONS() { return getToken(GrammarBParser.OPERATIONS, 0); }
		public Argument_listContext argument_list() {
			return getRuleContext(Argument_listContext.class,0);
		}
		public Valuable_interuptContext valuable_interupt() {
			return getRuleContext(Valuable_interuptContext.class,0);
		}
		public PropositionContext proposition() {
			return getRuleContext(PropositionContext.class,0);
		}
		public Function_defineContext function_define(int i) {
			return getRuleContext(Function_defineContext.class,i);
		}
		public TerminalNode LEFT_BRACKET() { return getToken(GrammarBParser.LEFT_BRACKET, 0); }
		public Const_interuptContext const_interupt() {
			return getRuleContext(Const_interuptContext.class,0);
		}
		public TerminalNode END() { return getToken(GrammarBParser.END, 0); }
		public Abstact_machineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abstact_machine; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarBVisitor ) return ((GrammarBVisitor<? extends T>)visitor).visitAbstact_machine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Abstact_machineContext abstact_machine() throws RecognitionException {
		Abstact_machineContext _localctx = new Abstact_machineContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_abstact_machine);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(MACHINE);
			setState(107); match(ID);
			setState(108); match(LEFT_BRACKET);
			setState(110);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_TYPE) | (1L << DOUBLE_TYPE) | (1L << CHAR_TYPE) | (1L << STRING_TYPE) | (1L << PROPOSITION_TYPE) | (1L << SET_TYPE) | (1L << TUPLE_TYPE) | (1L << BOOL_TYPE))) != 0)) {
				{
				setState(109); argument_list();
				}
			}

			setState(112); match(RIGHT_BRACKET);
			setState(113); match(INVARIANT);
			setState(115);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LEFT_BRACKET) | (1L << LEFT_BRACE) | (1L << LEFT_ANGLE_BRACKET) | (1L << BOOL) | (1L << CHAR) | (1L << STRING) | (1L << NIL) | (1L << INTEGER) | (1L << REAL) | (1L << PROPOSITION_SYMBOL_1) | (1L << ADD) | (1L << SUB) | (1L << ID))) != 0)) {
				{
				setState(114); proposition();
				}
			}

			setState(117); match(ATTRIBUTE);
			setState(118); const_interupt();
			setState(119); valuable_interupt();
			setState(120); match(OPERATIONS);
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(121); function_declare();
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_TYPE) | (1L << DOUBLE_TYPE) | (1L << CHAR_TYPE) | (1L << STRING_TYPE) | (1L << PROPOSITION_TYPE) | (1L << SET_TYPE) | (1L << TUPLE_TYPE) | (1L << BOOL_TYPE) | (1L << VOID))) != 0)) {
				{
				{
				setState(127); function_define();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declareContext extends ParserRuleContext {
		public Have_return_declareContext have_return_declare() {
			return getRuleContext(Have_return_declareContext.class,0);
		}
		public No_return_declareContext no_return_declare() {
			return getRuleContext(No_return_declareContext.class,0);
		}
		public Function_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declare; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarBVisitor ) return ((GrammarBVisitor<? extends T>)visitor).visitFunction_declare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_declareContext function_declare() throws RecognitionException {
		Function_declareContext _localctx = new Function_declareContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function_declare);
		try {
			setState(137);
			switch (_input.LA(1)) {
			case INT_TYPE:
			case DOUBLE_TYPE:
			case CHAR_TYPE:
			case STRING_TYPE:
			case PROPOSITION_TYPE:
			case SET_TYPE:
			case TUPLE_TYPE:
			case BOOL_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(135); have_return_declare();
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 2);
				{
				setState(136); no_return_declare();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_defineContext extends ParserRuleContext {
		public No_return_defineContext no_return_define() {
			return getRuleContext(No_return_defineContext.class,0);
		}
		public Have_return_defineContext have_return_define() {
			return getRuleContext(Have_return_defineContext.class,0);
		}
		public Function_defineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_define; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarBVisitor ) return ((GrammarBVisitor<? extends T>)visitor).visitFunction_define(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_defineContext function_define() throws RecognitionException {
		Function_defineContext _localctx = new Function_defineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_define);
		try {
			setState(141);
			switch (_input.LA(1)) {
			case INT_TYPE:
			case DOUBLE_TYPE:
			case CHAR_TYPE:
			case STRING_TYPE:
			case PROPOSITION_TYPE:
			case SET_TYPE:
			case TUPLE_TYPE:
			case BOOL_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(139); have_return_define();
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 2);
				{
				setState(140); no_return_define();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Valuable_declareContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(GrammarBParser.COMMA); }
		public List<TerminalNode> ID() { return getTokens(GrammarBParser.ID); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode COMMA(int i) {
			return getToken(GrammarBParser.COMMA, i);
		}
		public TerminalNode ID(int i) {
			return getToken(GrammarBParser.ID, i);
		}
		public Valuable_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuable_declare; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarBVisitor ) return ((GrammarBVisitor<? extends T>)visitor).visitValuable_declare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Valuable_declareContext valuable_declare() throws RecognitionException {
		Valuable_declareContext _localctx = new Valuable_declareContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_valuable_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); type();
			setState(144); match(ID);
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(145); match(COMMA);
				setState(146); match(ID);
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Valuable_interuptContext extends ParserRuleContext {
		public List<TerminalNode> SEMICOLON() { return getTokens(GrammarBParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(GrammarBParser.SEMICOLON, i);
		}
		public List<Valuable_declareContext> valuable_declare() {
			return getRuleContexts(Valuable_declareContext.class);
		}
		public Valuable_declareContext valuable_declare(int i) {
			return getRuleContext(Valuable_declareContext.class,i);
		}
		public Valuable_interuptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuable_interupt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarBVisitor ) return ((GrammarBVisitor<? extends T>)visitor).visitValuable_interupt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Valuable_interuptContext valuable_interupt() throws RecognitionException {
		Valuable_interuptContext _localctx = new Valuable_interuptContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_valuable_interupt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_TYPE) | (1L << DOUBLE_TYPE) | (1L << CHAR_TYPE) | (1L << STRING_TYPE) | (1L << PROPOSITION_TYPE) | (1L << SET_TYPE) | (1L << TUPLE_TYPE) | (1L << BOOL_TYPE))) != 0)) {
				{
				{
				setState(152); valuable_declare();
				setState(153); match(SEMICOLON);
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_declareContext extends ParserRuleContext {
		public TerminalNode INT_TYPE() { return getToken(GrammarBParser.INT_TYPE, 0); }
		public List<Element_groupContext> element_group() {
			return getRuleContexts(Element_groupContext.class);
		}
		public TerminalNode STRING(int i) {
			return getToken(GrammarBParser.STRING, i);
		}
		public TerminalNode STRING_TYPE() { return getToken(GrammarBParser.STRING_TYPE, 0); }
		public TerminalNode BOOL_TYPE() { return getToken(GrammarBParser.BOOL_TYPE, 0); }
		public TerminalNode CHAR_TYPE() { return getToken(GrammarBParser.CHAR_TYPE, 0); }
		public TerminalNode TUPLE_TYPE() { return getToken(GrammarBParser.TUPLE_TYPE, 0); }
		public List<TerminalNode> CHAR() { return getTokens(GrammarBParser.CHAR); }
		public List<Signed_integerContext> signed_integer() {
			return getRuleContexts(Signed_integerContext.class);
		}
		public TerminalNode ID(int i) {
			return getToken(GrammarBParser.ID, i);
		}
		public List<TerminalNode> ASSIGN_SYMBOL() { return getTokens(GrammarBParser.ASSIGN_SYMBOL); }
		public List<TerminalNode> ID() { return getTokens(GrammarBParser.ID); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarBParser.COMMA, i);
		}
		public TerminalNode CHAR(int i) {
			return getToken(GrammarBParser.CHAR, i);
		}
		public List<TerminalNode> BOOL() { return getTokens(GrammarBParser.BOOL); }
		public SetContext set(int i) {
			return getRuleContext(SetContext.class,i);
		}
		public TerminalNode DOUBLE_TYPE() { return getToken(GrammarBParser.DOUBLE_TYPE, 0); }
		public TerminalNode ASSIGN_SYMBOL(int i) {
			return getToken(GrammarBParser.ASSIGN_SYMBOL, i);
		}
		public Element_groupContext element_group(int i) {
			return getRuleContext(Element_groupContext.class,i);
		}
		public TerminalNode PROPOSITION_TYPE() { return getToken(GrammarBParser.PROPOSITION_TYPE, 0); }
		public PropositionContext proposition(int i) {
			return getRuleContext(PropositionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrammarBParser.COMMA); }
		public List<PropositionContext> proposition() {
			return getRuleContexts(PropositionContext.class);
		}
		public TerminalNode SET_TYPE() { return getToken(GrammarBParser.SET_TYPE, 0); }
		public Signed_realContext signed_real(int i) {
			return getRuleContext(Signed_realContext.class,i);
		}
		public TerminalNode BOOL(int i) {
			return getToken(GrammarBParser.BOOL, i);
		}
		public List<Signed_realContext> signed_real() {
			return getRuleContexts(Signed_realContext.class);
		}
		public Signed_integerContext signed_integer(int i) {
			return getRuleContext(Signed_integerContext.class,i);
		}
		public List<TerminalNode> STRING() { return getTokens(GrammarBParser.STRING); }
		public List<SetContext> set() {
			return getRuleContexts(SetContext.class);
		}
		public Const_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_declare; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarBVisitor ) return ((GrammarBVisitor<? extends T>)visitor).visitConst_declare(this);
			else return visitor.visitChildren(this);
		}
	}
